# QrcodeRaderTCC

./: CMakeLists.txt  README.md  arquivoTeste.txt  b64Encoder.cpp  compilar.txt  crip.txt  criptografia-teste1  criptografia-teste1.cpp  decBinary.txt  doc-example.cpp  file-example-dec.txt  file-example-enc.txt  saveKeys  saveKeys.cpp  temp.cpp  teste  teste1.cpp  teste2.cpp  teste3  teste3.cpp
keys/: camera.pri  camera.pub
